Updated the notification schema
